--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git@github.com:philbarr/basic-webdev-template.git"
   },
   "keywords": [
-    "webrtc"
+    "webdev"
   ],
   "author": "Philip Barr",
   "license": "ISC",
