--- a/package.json
+++ b/package.json
@@ -20,18 +20,20 @@
   "author": "Philip Barr",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.16.4",
     "jquery": "^3.4.1",
     "node-static": "^0.7.11",
-    "popper.js": "^1.14.6"
+    "popper.js": "^1.14.7",
+    "webpack-icons-installer": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.4.3",
     "css-loader": "^2.0.2",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
